# csharp_binary_encoding

./: .gitignore  CHANGELOG.md  CONTRIBUTIONS  Cargo.toml  LICENSE  README.md
cs_test_input_generation/: Program.cs
csharp_testing/: csharp_testing.cs
src/: lib.rs
src/encoding/: binaryreader.rs  binarywriter.rs
