[package]
name = "csharp_binary_encoding"
version = "0.1.0"
authors = ["nilrem <nilremdev@gmail.com>"]
edition = "2024"
description = "Decode binary data written by C#'s BinaryWriter class."
readme = "README.md"
repository = "https://github.com/nilrem3/csharp_binary_encoding"
license = "GPL-3.0-or-later"
keywords = ["csharp", "binary", "decode", "deserialize"]
categories = ["encoding"]

[dependencies]

[dev-dependencies]
cfg-if = "1.0.0"
xshell = "0.2.7"

[features]
f16_support = []

[package.metadata.docs.rs]
all-features = "true"
rustdoc-args = ["--cfg", "docsrs"]
